AC_INIT([embXml],[0.1])
AM_INIT_AUTOMAKE ([-Wall -Werror foreign])
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX
CXXFLAGS="$CFLAGS -Wall -W -pedantic"
LIBS=

AC_CONFIG_FILES([Makefile] [include/libEmbMem/Makefile] [include/libEmbXml/Makefile] [src/libEmbMem/Makefile] [src/libEmbXml/Makefile])
AC_OUTPUT

echo
echo "Ready to run 'make'"
