#lib_LTLIBRARIES = libembMem.la libembXml.la
lib_LTLIBRARIES = libEmbMem.la

INCLUDES = -I$(top_srcdir)/include 

#libembXml_la_SOURCES = document.cpp IOFile.cpp
libEmbMem_la_SOURCES = charBuffer.cpp  

#include_HEADERS = charBuffer.h

# libembMem_la_LDFLAGS = -version-info 2:1:0
# libembXml_la_LDFLAGS = -version-info 2:1:0

MAINTAINERCLEANFILES = Makefile.in

